0.13 "" (released xx.xx.xxxx)

  * Fix command argument order when extracting cpio archives.
  * Added correct cpio MIME type on Debian systems.
  * Added support for the clzip and pdlzip programs who are both capable
    of handling LZIP (.lz) archives.

0.12 "Galaxy Quest" (released 20.11.2010)

  * Show commands that are run.
  * Fix rar extraction unpack directory.
  * Fix ZIP mimedb detection on Windows systems.

0.11 "Primer" (released 4.10.2010)

  * Added support for the standalone 7za program.

0.10 "Matchpoint" (released 10.4.2010)

  * Correct shell quoting of commandline arguments. Now files with
    spaces or other special characters are handled correctly.
  * Use correct error routine on rmtree() errors. The previous
    one did not have the correct number of arguments.

0.9 "Cargo" (released 26.3.2010)

  * Do not use the diff -B option when comparing archives.
  * Improved documentation: explain commands in more detail.
  * Added support for RZIP (.rz) archives.
  * Added support for ZOO (.zoo) archives.

0.8 "Storage" (released 11.3.2010)

  * Fix path error by using absolute pathname for archive when changing
    the current working directory to the unpack directory.
  * Fix parsing of the "-v" short option.
  * Added new command "patool diff" to show differences between two
    archives.
  * Added new command "patool repack" to repackage archives in another
    format.

0.7 "3000 Miles to Graceland" (released 8.3.2010)

  * Added support for ALZIP (.alz) archives.
  * Added support for LRZIP (.lrz) archives.
  * Added support for ARC (.arc) archives.

0.6 "Waking Ned" (released 6.3.2010)

  * Remove the --force option. Local files are now never overwritten.
  * Added option alias -v for --verbose.
  * Added --verbose option to create command.
  * Added support for extracting, listing and testing multiple archives.
  * Fix permissions of extracted files: make them readable by the
    current user.
  * Added support for ACE (.ace) archives.